--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -55,7 +55,7 @@
             %figure
               = image_tag 'outfits_welcome.png'
               %figcaption= t '.sidebar.outfits.not_signed_in.header'
-            = tmd '.sidebar.outfits.not_signed_in.pitch_markdown'
+            = tmd '.sidebar.outfits.not_signed_in.pitch'
             = link_to t('.sidebar.outfits.not_signed_in.sign_in'),
               login_path_with_return_to, :id => 'preview-outfits-log-in'
         #preview-sharing.sidebar-view
