i18n for pet_query.js

--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -87,7 +87,13 @@
         - @newest_items.each do |item|
           = link_to image_tag(item.thumbnail_url), item
 
+- localized_cache :action_suffix => 'pet_query_notice' do
+  %script#pet-query-notice-template{:type => 'text/x-jquery-tmpl'}
+    .success
+      %img.inline-image{:src => '${pet_image_url}'}
+      = t '.pet_query.notice_html', :pet_name => '${pet_name}'
+
 - content_for :javascripts do
-  = include_javascript_libraries :jquery
+  = include_javascript_libraries :jquery, :jquery_tmpl
   = include_javascripts :new_outfit_package
 
