simple locale dropdown in layouts#application

--- a/app/stylesheets/_layout.sass
+++ b/app/stylesheets/_layout.sass
@@ -116,6 +116,8 @@ ul.buttons
   li, div ul
     display: inline
     margin: 0 .5em
+  #locale-form
+    float: right
 
 .success, .alert, .warning
   margin-bottom: 1em
