appearance dropdown - wow, that was easy

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -55,17 +55,7 @@ body.outfits-edit
   #pet-info form
     display: inline
   #pet-state-form
-    ul
-      list-style: none
-      &, li
-        display: inline
-    input
-      display: none
-    label
-      +awesome-button
-      margin: 0 .25em
-    li.selected button
-      +awesome-button-color($marked_button_color)
+    font-size: 85%
     &.hidden
       visibility: hidden
   #save-outfit-wrapper
