--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -9,7 +9,7 @@
       %input{:type => "submit", :value => t('.pet_type.form.submit')}
     %form#pet-state-form
       = t '.pet_state_form.header'
-      %ul
+      %select
     #save-outfit-wrapper
       %a#current-outfit-permalink{:target => '_blank'}
         = image_tag 'link_go.png', :alt => t('.outfit.permalink.name'),
