align homepage forms, phew

--- a/app/stylesheets/outfits/_new.sass
+++ b/app/stylesheets/outfits/_new.sass
@@ -42,9 +42,9 @@ body.outfits-new
           display: none
     fieldset
       position: relative
-      left: 1em
+      left: 16px
       legend
-        margin-left: -1em
+        margin-left: -16px
   #load-pet-to-wardrobe
     font-size: 175%
     margin:
